--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p class="sv">Savoxit ~ Copyright 2020</p>
             <center><div class="icon">
             <a href="https://www.facebook.com/farhan.UwU4" target="_blank"><i style='font-size:24px' class='fab'>&#xf09a;</i></a>
-            <a href="#" target="_blank"><i style="font-size:24px" class="fa">&#xf099;</i></a>
+            <a href="https://twitter.com/farhan39379432" target="_blank"><i style="font-size:24px" class="fa">&#xf099;</i></a>
             <a href="#" target="_blank"><i class="material-icons">&#xe0be;</i></a>
             <a href="#" target="_blank"><i style="font-size:24px" class="fa">&#xf19a;</i></a>
             </div></center>
