--- a/latian.html
+++ b/latian.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Suwit</title>
+    <title>Game Suwit Savoxit</title>
     <script src="latian.js"></script>
 </head>
 <body>
-    <center><h1>Let's play</h1>
+    <center><h1>Game Suwit Savoxit</h1>
     <br>
     <br>
+    <p>Ini adalah game suit yang biasa dimainkan oleh anak-anak, tapi bisakan anda melawan komputer?</p>
+    <p>enjoy &#128514; &#128514; &#128514;</p>
     <a href=""><button>main lagi?</button></a></center>
 </body>
 </html>
