--- a/latian.html
+++ b/latian.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Suwit</title>
     <script src="latian.js"></script>
-    <link rel="shortcut icon" href="img-js/sh.png"
+    <link rel="shortcut icon" href="sh.png"
 </head>
 <body>
     <center><h1>Game Suwit Savoxit</h1>
     <br>
     <br>
-    <img src="img-js/sh1.png">    
+    <img src="sh1.png">    
     <p>Ini adalah game suit yang biasa dimainkan oleh anak-anak, tapi bisakan anda melawan komputer?</p>
     <p>enjoy &#128514; &#128514; &#128514;</p>
     <a href=""><button>main lagi?</button></a></center>
